--- a/client/src/app/features/api-keys/api-key-manangement/api-key-management.component.html
+++ b/client/src/app/features/api-keys/api-key-manangement/api-key-management.component.html
@@ -144,7 +144,7 @@
         class="w-70"
         type="text"
         pInputText
-        placeholder="Search by Name"
+        placeholder="Search key..."
         [(ngModel)]="searchQuery"
         (input)="searchByName()"
       />
