--- a/client/src/app/layouts/main-layout/main-layout.component.html
+++ b/client/src/app/layouts/main-layout/main-layout.component.html
@@ -4,10 +4,17 @@
   <div
     class="app-topbar flex items-center justify-between gap-2 pl-2 pr-4 py-2 border-b-1 border-surface-200"
   >
-    <div class="flex items-center">
+    <div class="flex gap-3 items-center">
       <div class="px-0.5">
-        <p-image src="assets/images/logo.png" width="32" />
+        <p-image
+          src="assets/images/logo.png"
+          width="32"
+          class="cursor-pointer"
+          (click)="reload()"
+        />
       </div>
+      <div class="text-surface-300">/</div>
+      <div class="font-medium text-sm">{{ title() }}</div>
     </div>
     <div class="flex gap-2 items-center">
       <p-button
