--- a/client/src/app/features/api-keys/api-key-entry/api-key-entry.component.html
+++ b/client/src/app/features/api-keys/api-key-entry/api-key-entry.component.html
@@ -7,26 +7,28 @@
       </div>
     </ng-template>
 
-    <div class="flex flex-col gap-6">
+    <form class="flex flex-col gap-6" (submit)="save()">
       <p-iconField iconPosition="left">
         <p-inputIcon class="icon icon-key" />
         <input
           pInputText
           [(ngModel)]="apiKey"
+          [ngModelOptions]="{ standalone: true }"
           placeholder="Enter your API Key to continue"
           class="w-full"
           type="password"
           pSize="large"
         />
       </p-iconField>
-      <p-button
+      <button
+        pButton
+        type="submit"
         label="Continue"
-        (onClick)="save()"
         [loading]="loading"
         severity="primary"
         size="large"
         fluid
-      />
-    </div>
+      ></button>
+    </form>
   </p-card>
 </div>
