--- a/client/src/app/shared/json-editor/json-editor-drawer.component.html
+++ b/client/src/app/shared/json-editor/json-editor-drawer.component.html
@@ -2,7 +2,7 @@
   [(visible)]="visible"
   position="right"
   header="JSON Editor"
-  styleClass="!w-180 custom-drawer json-editor-drawer"
+  styleClass="!w-180 custom-drawer"
 >
   <ng-template #content>
     <json-editor [(value)]="value" />
