--- a/client/src/app/shared/rich-text-editor/rich-text-editor-drawer.component.html
+++ b/client/src/app/shared/rich-text-editor/rich-text-editor-drawer.component.html
@@ -2,7 +2,7 @@
   [(visible)]="visible"
   position="right"
   header="Rich Text Editor"
-  styleClass="!w-180 rich-text-editor-drawer"
+  styleClass="!w-180 custom-drawer rich-text-editor-drawer"
 >
   <ng-template #content>
     <p-editor [(ngModel)]="value" [readonly]="viewOnly()" class="h-full !flex flex-col" />
