--- a/client/src/app/features/api-keys/api-key-manangement/api-key-management.component.html
+++ b/client/src/app/features/api-keys/api-key-manangement/api-key-management.component.html
@@ -9,7 +9,7 @@
 >
   <ng-template #content>
     <form id="apiKeyForm" #apiKeyForm="ngForm" (ngSubmit)="onApiKeyFormSubmit()">
-      <div class="flex flex-col gap-12">
+      <div class="p-5">
         <div class="grid grid-cols-3 w-full gap-12">
           <label for="name" class="col-span-1">
             <p class="font-medium">Name</p>
@@ -35,7 +35,9 @@
             }
           </div>
         </div>
-        <p-divider />
+      </div>
+      <p-divider />
+      <div class="p-5">
         <div class="grid grid-cols-3 w-full gap-12">
           <label for="description" class="col-span-1">
             <p class="font-medium">Permissions</p>
