--- a/client/src/app/features/base/table/table-editor/table-editor-drawer.component.html
+++ b/client/src/app/features/base/table/table-editor/table-editor-drawer.component.html
@@ -6,99 +6,96 @@
 >
   <ng-template #content>
     <form #tableForm="ngForm" (ngSubmit)="onSubmit()">
-      <div class="flex flex-col gap-12">
-        <div class="grid grid-cols-3 w-full gap-12">
-          <label for="name" class="col-span-1">
-            <p class="font-medium">Name</p>
-            <p class="text-surface-500 text-xs">
-              Only letters, numbers, space, _, $ allowed and must start with a letter or _.
-            </p>
-          </label>
-          <div class="flex flex-col gap-1 col-span-2">
-            <input
-              pInputText
-              id="name"
-              name="tableName"
-              [pAutoFocus]="true"
-              [invalid]="tableName.invalid && (tableName.touched || tableForm.submitted)"
-              [(ngModel)]="updatedTable.tableName"
-              #tableName="ngModel"
+      <div class="p-5">
+        <div class="flex flex-col gap-12">
+          <div class="grid grid-cols-3 w-full gap-12">
+            <label for="name" class="col-span-1">
+              <p class="font-medium">Name</p>
+              <p class="text-surface-500 text-xs">
+                Only letters, numbers, space, _, $ allowed and must start with a letter or _.
+              </p>
+            </label>
+            <div class="flex flex-col gap-1 col-span-2">
+              <input
+                pInputText
+                id="name"
+                name="tableName"
+                [pAutoFocus]="true"
+                [invalid]="tableName.invalid && (tableName.touched || tableForm.submitted)"
+                [(ngModel)]="updatedTable.tableName"
+                #tableName="ngModel"
+                placeholder="Input here..."
+                required
+                pattern="[a-zA-Z_][a-zA-Z0-9_$ ]*"
+              />
+              @if (tableName.invalid && (tableName.touched || tableForm.submitted)) {
+                <p-message severity="error" size="small" variant="simple">
+                  @if (tableName.errors['required']) {
+                    Table name is required.
+                  } @else if (tableName.errors?.['pattern']) {
+                    Invalid table name.
+                  }
+                </p-message>
+              }
+            </div>
+          </div>
+          <div class="grid grid-cols-3 w-full gap-12">
+            <label for="description" class="col-span-1">
+              <p class="font-medium">Description</p>
+            </label>
+            <textarea
+              pTextarea
+              id="description"
+              name="description"
+              [(ngModel)]="updatedTable.tableComment"
+              rows="5"
+              class="col-span-2"
               placeholder="Input here..."
-              required
-              pattern="[a-zA-Z_][a-zA-Z0-9_$ ]*"
-            />
-            @if (tableName.invalid && (tableName.touched || tableForm.submitted)) {
-              <p-message severity="error" size="small" variant="simple">
-                @if (tableName.errors['required']) {
-                  Table name is required.
-                } @else if (tableName.errors?.['pattern']) {
-                  Invalid table name.
-                }
-              </p-message>
-            }
+            ></textarea>
           </div>
         </div>
-        <div class="grid grid-cols-3 w-full gap-12">
-          <label for="description" class="col-span-1">
-            <p class="font-medium">Description</p>
-          </label>
-          <textarea
-            pTextarea
-            id="description"
-            name="description"
-            [(ngModel)]="updatedTable.tableComment"
-            rows="5"
-            class="col-span-2"
-            placeholder="Input here..."
-          ></textarea>
-        </div>
-        <p-divider align="center" type="solid">
-          <b>Advanced settings</b>
-        </p-divider>
-        @if (mode() === 'edit') {
-          <p-message severity="info" class="w-full">
-            <p>
-              Note: To modify columns or other advanced settings, please use the Table Editor after
-              saving the table details.
-            </p>
-          </p-message>
-        } @else {
-          <div class="grid grid-cols-3 w-full gap-12">
-            <label for="description" class="col-span-1">
-              <p class="font-medium">Primary Key</p>
-              <p class="text-surface-500 text-xs">
-                Auto-Adding a primary key "id" column for this table.
-              </p>
-            </label>
-            <div class="col-span-2">
-              <p-checkbox
-                id="autoAddingPrimaryKey"
-                name="autoAddingPrimaryKey"
-                [(ngModel)]="updatedTable.autoAddingPrimaryKey"
-                [binary]="true"
-                size="large"
-              />
-            </div>
-          </div>
-          <div class="grid grid-cols-3 w-full gap-12">
-            <label for="description" class="col-span-1">
-              <p class="font-medium">Timestamps</p>
-              <p class="text-surface-500 text-xs">
-                Enable automatic "Created At" and "Updated At" columns for this table.
-              </p>
-            </label>
-            <div class="col-span-2">
-              <p-checkbox
-                id="timestamps"
-                name="timestamps"
-                [(ngModel)]="updatedTable.timestamps"
-                [binary]="true"
-                size="large"
-              />
-            </div>
-          </div>
-        }
       </div>
+      @if (mode() === 'add') {
+        <p-divider />
+        <div class="p-5">
+          <div class="flex flex-col gap-12">
+            <div class="grid grid-cols-3 w-full gap-12">
+              <label for="description" class="col-span-1">
+                <p class="font-medium">Primary Key</p>
+                <p class="text-surface-500 text-xs">
+                  Auto-Adding a primary key "id" column for this table.
+                </p>
+              </label>
+              <div class="col-span-2">
+                <p-checkbox
+                  id="autoAddingPrimaryKey"
+                  name="autoAddingPrimaryKey"
+                  [(ngModel)]="updatedTable.autoAddingPrimaryKey"
+                  [binary]="true"
+                  size="large"
+                />
+              </div>
+            </div>
+            <div class="grid grid-cols-3 w-full gap-12">
+              <label for="description" class="col-span-1">
+                <p class="font-medium">Timestamps</p>
+                <p class="text-surface-500 text-xs">
+                  Enable automatic "Created At" and "Updated At" columns for this table.
+                </p>
+              </label>
+              <div class="col-span-2">
+                <p-checkbox
+                  id="timestamps"
+                  name="timestamps"
+                  [(ngModel)]="updatedTable.timestamps"
+                  [binary]="true"
+                  size="large"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      }
     </form>
   </ng-template>
   <ng-template #footer>
