feat: add loading spinner to table list component and adjust optional fields styling in record editor

--- a/client/src/app/features/base/table/table-list/table-list.component.html
+++ b/client/src/app/features/base/table/table-list/table-list.component.html
@@ -69,37 +69,48 @@
     />
   </p-iconfield>
 </div>
-<ul class="list-none p-0 m-0 overflow-y-auto max-h-full">
-  @for (table of filteredTables(); track table.tableName) {
-    <li (click)="onTableSelected(table)">
-      <a
-        pRipple
-        class="group flex items-center cursor-pointer px-4 py-2 text-surface-700 hover:bg-gray-100 duration-150 transition-colors p-ripple"
-        [class.bg-gray-100]="table.tableName === tblService.selectedTable()?.tableName"
-      >
-        <div class="flex flex-1">
-          <i class="icon icon-table-2 text-surface-500 mr-2 mt-0.5"></i>
-          <div class="flex-1">
-            <p class="font-medium">{{ table.tableName }}</p>
-            <p class="font-light text-surface-500 text-xs">
-              @if (table.tableComment) {
-                {{ table.tableComment }}
-              } @else {
-                <i>No description</i>
-              }
-            </p>
+@if (isLoading()) {
+  <div class="flex items-center">
+    <p-progress-spinner
+      strokeWidth="8"
+      fill="transparent"
+      animationDuration=".5s"
+      [style]="{ width: '20px', height: '20px' }"
+    />
+  </div>
+} @else {
+  <ul class="list-none p-0 m-0 overflow-y-auto max-h-full">
+    @for (table of filteredTables(); track table.tableName) {
+      <li (click)="onTableSelected(table)">
+        <a
+          pRipple
+          class="group flex items-center cursor-pointer px-4 py-2 text-surface-700 hover:bg-gray-100 duration-150 transition-colors p-ripple"
+          [class.bg-gray-100]="table.tableName === tblService.selectedTable()?.tableName"
+        >
+          <div class="flex flex-1">
+            <i class="icon icon-table-2 text-surface-500 mr-2 mt-0.5"></i>
+            <div class="flex-1">
+              <p class="font-medium">{{ table.tableName }}</p>
+              <p class="font-light text-surface-500 text-xs">
+                @if (table.tableComment) {
+                  {{ table.tableComment }}
+                } @else {
+                  <i>No description</i>
+                }
+              </p>
+            </div>
           </div>
-        </div>
-        <p-button
-          icon="icon icon-ellipsis-vertical"
-          severity="secondary"
-          size="small"
-          [text]="true"
-          [disabled]="isLoading()"
-          (click)="openTableActionMenu($event, table, tableMenu)"
-          class="invisible group-hover:visible"
-        />
-      </a>
-    </li>
-  }
-</ul>
+          <p-button
+            icon="icon icon-ellipsis-vertical"
+            severity="secondary"
+            size="small"
+            [text]="true"
+            [disabled]="isLoading()"
+            (click)="openTableActionMenu($event, table, tableMenu)"
+            class="invisible group-hover:visible"
+          />
+        </a>
+      </li>
+    }
+  </ul>
+}
