--- a/client/src/app/features/base/table/record-editor/record-editor-drawer.component.html
+++ b/client/src/app/features/base/table/record-editor/record-editor-drawer.component.html
@@ -120,7 +120,7 @@
     <p-divider />
     <div class="p-5">
       <div class="mb-10">
-        <p class="font-medium text-base">Optional Fields</p>
+        <p class="font-medium">Optional Fields</p>
         <p class="text-surface-500 text-sm">These are columns that do not need any value</p>
       </div>
       <div class="flex flex-col gap-12">
