--- a/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
@@ -9,49 +9,50 @@
       <div class="p-5">
         <div class="flex flex-col gap-12">
           <div class="grid grid-cols-3 w-full gap-12">
-            <label for="name" class="col-span-1">
-              <p class="font-medium">Name</p>
+            <label class="col-span-1">
+              <p class="font-medium text-sm">General</p>
             </label>
-            <div class="flex flex-col gap-1 col-span-2">
-              <input
-                pInputText
-                id="name"
-                name="name"
-                [pAutoFocus]="true"
-                [invalid]="name.invalid && (name.touched || columnForm.submitted)"
-                [(ngModel)]="updatedColumn.name"
-                #name="ngModel"
-                placeholder="Input here..."
-                required
-                pattern="[a-zA-Z_][a-zA-Z0-9_$ ]*"
-              />
-              @if (name.invalid && (name.touched || columnForm.submitted)) {
-                <p-message severity="error" size="small" variant="simple">
-                  @if (name.errors['required']) {
-                    Column name is required.
-                  } @else if (name.errors?.['pattern']) {
-                    Invalid column name.
-                  }
-                </p-message>
-              }
-              <p class="text-surface-500 text-xs">
-                Only letters, numbers, space, _, $ allowed and must start with a letter or _.
-              </p>
+            <div class="flex flex-col col-span-2 gap-8">
+              <div class="flex flex-col gap-1">
+                <label for="name" class="text-sm">Name</label>
+                <input
+                  pInputText
+                  id="name"
+                  name="name"
+                  [pAutoFocus]="true"
+                  [invalid]="name.invalid && (name.touched || columnForm.submitted)"
+                  [(ngModel)]="columnFormData.name"
+                  #name="ngModel"
+                  placeholder="Input here..."
+                  required
+                  pattern="[a-zA-Z_][a-zA-Z0-9_$ ]*"
+                />
+                @if (name.invalid && (name.touched || columnForm.submitted)) {
+                  <p-message severity="error" size="small" variant="simple">
+                    @if (name.errors['required']) {
+                      Table name is required.
+                    } @else if (name.errors?.['pattern']) {
+                      Invalid table name.
+                    }
+                  </p-message>
+                }
+                <p class="text-surface-500 text-xs">
+                  Only letters, numbers, space, _, $ allowed and must start with a letter or _.
+                </p>
+              </div>
+              <div class="flex flex-col gap-1">
+                <label for="description" class="text-sm">Description</label>
+                <textarea
+                  pTextarea
+                  id="description"
+                  name="description"
+                  [(ngModel)]="columnFormData.comment"
+                  rows="5"
+                  class="col-span-2"
+                  placeholder="Input here..."
+                ></textarea>
+              </div>
             </div>
-          </div>
-          <div class="grid grid-cols-3 w-full gap-12">
-            <label for="description" class="col-span-1">
-              <p class="font-medium">Description</p>
-            </label>
-            <textarea
-              pTextarea
-              id="description"
-              name="description"
-              [(ngModel)]="updatedColumn.comment"
-              rows="5"
-              class="col-span-2"
-              placeholder="Input here..."
-            ></textarea>
           </div>
         </div>
       </div>
@@ -59,19 +60,19 @@
       <div class="p-5">
         <div class="grid grid-cols-3 w-full gap-12">
           <label for="description" class="col-span-1">
-            <p class="font-medium">Constraints</p>
+            <p class="font-medium text-sm">Constraints</p>
           </label>
           <div class="flex flex-col gap-8 col-span-2">
             <div class="flex gap-4">
               <p-checkbox
                 id="primary"
                 name="primary"
-                [(ngModel)]="updatedColumn.primary"
+                [(ngModel)]="columnFormData.primary"
                 [binary]="true"
                 size="large"
               />
-              <div class="flex flex-col gap-1">
-                <label for="primary">Is Primary Key</label>
+              <div>
+                <label for="primary" class="text-sm">Is Primary Key</label>
                 <p class="text-surface-500 text-xs">
                   A primary key indicates that a column or group of columns can be used as a unique
                   identifier for rows in the table
@@ -82,12 +83,12 @@
               <p-checkbox
                 id="nullable"
                 name="nullable"
-                [(ngModel)]="updatedColumn.nullable"
+                [(ngModel)]="columnFormData.nullable"
                 [binary]="true"
                 size="large"
               />
-              <div class="flex flex-col gap-1">
-                <label for="nullable">Allow Nullable</label>
+              <div>
+                <label for="nullable" class="text-sm">Allow Nullable</label>
                 <p class="text-surface-500 text-xs">
                   Allow the column to assume a NULL value if no value is provided
                 </p>
@@ -97,12 +98,12 @@
               <p-checkbox
                 id="unique"
                 name="unique"
-                [(ngModel)]="updatedColumn.unique"
+                [(ngModel)]="columnFormData.unique"
                 [binary]="true"
                 size="large"
               />
-              <div class="flex flex-col gap-1">
-                <label for="unique">Is Unique</label>
+              <div>
+                <label for="unique" class="text-sm">Is Unique</label>
                 <p class="text-surface-500 text-xs">
                   Enforce values in the column to be unique across rows
                 </p>
